--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,7 +6,7 @@
       <form name="searchForm" ng-submit="submit()">
         <div class="row" id="location-inputs">
           <div class="col-md-6" id="departure-input">
-            <typeahead items="airports" prompt="Departure..." title="code" subtitle="city" model="search.depart_location" on-select="onItemSelected()" />
+            <typeahead items="airports" prompt="Departure..." title="code" subtitle="name" city="city" model="search.depart_location" on-select="onItemSelected()" />
           </div><br><br>
           <div class="col-md-6" id="arrival-input">
             <typeahead items="airports" prompt="Destination..." title="code" subtitle="city" model="search.arrival_location" on-select="onItemSelected()" />
