Added updated directive attributes in destination location

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -9,7 +9,7 @@
             <typeahead items="airports" prompt="Departure..." title="code" subtitle="name" city="city" model="search.depart_location" on-select="onItemSelected()" />
           </div><br><br>
           <div class="col-md-6" id="arrival-input">
-            <typeahead items="airports" prompt="Destination..." title="code" subtitle="city" model="search.arrival_location" on-select="onItemSelected()" />
+            <typeahead items="airports" prompt="Destination..." title="code" subtitle="name" city="city" model="search.arrival_location" on-select="onItemSelected()" />
           </div>
         </div>
         <div class="row" id="date-inputs">
