Created media query to move filter div to bottom of screen on mobile

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -46,3 +46,11 @@ div.panel-heading {
   background-color: #BDC3C7 !important;
   color: #2C3E50 !important;
 }
+
+@media only screen and (max-width : 700px) {
+  #filters {
+    position: fixed;
+    bottom: 0px;
+    width: 100% !important;
+  }
+}
