Edited containers on result page

--- a/app/views/filters/_filter.html.erb
+++ b/app/views/filters/_filter.html.erb
@@ -10,22 +10,48 @@
 </div>
 
 <div class="filter-list">
-    <div class="filter-option row">
-        <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-6"></div>
-                <div class="col-md-3">
-                    AM
-                </div>
-                <div class="col-md-3">
-                    PM
-                </div>
-            </div>
-        <div class="filter-option-label">
-            Departure
+  Stuff
+  <!-- <div class="row">
+    <div class="col-md-4">
+      <div class="row">
+        Departure
+      </div>
+      <div class="row">
+        Arrival
+      </div>
+      <div class="row">
+        AirBnB
+      </div>
+      <div class="row">
+        Direct Flight
+      </div>
+    </div> -->
+  </div>
+
+
+
+</div>
+ <!--    <div class="filter-option row">
+        <div class="filter-option-label col-md-6">
+            <span>Departure<span>
         </div>
-        <div class="filter-option-switch">
-            <input type="checkbox" id="test1" ng-model="options.departam_status" ng-change="updateFlights()"><label for="test1"><span class="ui"></span></label>
+        <div class="col-md-3 filter-switch-container">
+            <span>AM<span>
+            <div class="filter-option-switch">
+                <input type="checkbox" id="test1" ng-model="options.departam_status" ng-change="updateFlights()">
+                <label for="test1">
+                    <span class="ui"></span>
+                </label>
+            </div>
+        </div>
+        <div class="col-md-3 filter-switch-container">
+            <span>PM</span>
+            <div class="filter-option-switch">
+                <label for="test1">
+                    <span class="ui"></span>
+                </label>
+                <input type="checkbox" id="test1" ng-model="options.departam_status" ng-change="updateFlights()">
+            </div>
         </div>
     </div>
 
@@ -82,5 +108,5 @@
                 <input type="checkbox" id="test6" ng-model="options.direct_status" ng-change="updateFlights()"><label for="test6"><span class="ui"></span></label>
             </form>
         </div>
-    </div>
+    </div> -->
 </div>
