--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -51,6 +51,9 @@ div.panel-heading {
   #filters {
     position: fixed;
     bottom: 0px;
+    left: 0px;
     width: 100% !important;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
