--- a/app/views/filters/_filter.html.erb
+++ b/app/views/filters/_filter.html.erb
@@ -10,22 +10,51 @@
 </div>
 
 <div class="filter-list">
-  Stuff
-  <!-- <div class="row">
-    <div class="col-md-4">
-      <div class="row">
+  <div class="row filter-list-inner">
+    <div class="col-xs-7" id="filter-labels">
+      <span class="filter-option-label">
         Departure
-      </div>
-      <div class="row">
+      </span>
+      <span class="filter-option-label">
         Arrival
-      </div>
-      <div class="row">
+      </span>
+      <span class="filter-option-label">
         AirBnB
-      </div>
-      <div class="row">
+      </span>
+      <span class="filter-option-label">
         Direct Flight
+      </span>
+    </div>
+    <div class="col-xs-5">
+      <div class="btn-embossed" id="filter-switches">
+        <div class="row">
+          <span class="filter-option-switch btn-embossed">
+            <span class="filter-option-switch-inner fa fa-sun-o"></span>
+          </span>
+          <span class="filter-option-switch btn-embossed">
+            <span class="filter-option-switch-inner fa fa-moon-o"></span>
+          </span>
+        </div>
+        <div class="row">
+          <span class="filter-option-switch btn-embossed">
+            <span class="filter-option-switch-inner fa fa-sun-o"></span>
+          </span>
+          <span class="filter-option-switch btn-embossed">
+            <span class="filter-option-switch-inner fa fa-moon-o"></span>
+          </span>
+        </div>
+        <div class="row">
+          <span class="filter-option-switch">
+            <span class="filter-option-switch-inner fa fa-home"></span>
+          </span>
+        </div>
+        <div class="row">
+          <span class="filter-option-switch">
+            <span class="filter-option-switch-inner fa fa-arrow-circle-right"></span>
+          </span>
+        </div>
       </div>
-    </div> -->
+    </div>
   </div>
 
 
