--- a/app/views/results/_index.html.erb
+++ b/app/views/results/_index.html.erb
@@ -10,7 +10,7 @@
 <div ng-controller="TripController">
     <div class="three-column-container" ng-controller="HotelController">
 
-        <div class="col-md-2 col" id="filters" ng-show="show_filter">
+        <div class="col-md-3 col-xs-4 col" id="filters" ng-show="show_filter">
             <%= render "filters/filter" %>
         </div>
 
