--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -35,9 +35,9 @@ button.time-dur-btn {
 #filter-switches {
   height: 100%;
   background-color: #34495E;
-  padding-left: 30px;
+  padding-left: 45px;
   padding-top: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 20px;
   margin: 3px 3px 3px 0px;
   border-radius: 3px;
 }
@@ -55,26 +55,42 @@ button.time-dur-btn {
 
 .filter-option-label {
   display: block;
-  padding: 10px 8px 0px 12px;
+  padding: 15px 8px 0px 25px;
   color: #E4F1FE;
   font-size: 1.15em;
-  line-height: 1.2;
+  line-height: 1.5;
 }
 
 .filter-option-container {
   display: inline-block;
 }
 
-.filter-option-switch {
+input[type="checkbox"] {
+  display:none;
+}
+
+input[type="checkbox"] + label span.filter-option-switch {
   display: inline-block;
   width: 30px;
   height: 30px;
-  background-color: #22313F;
   color: white;
-  margin: 3px auto 3px auto;
+  margin: 10px auto 0px auto;
   text-align: center;
   vertical-align: center;
   border-radius: 5px;
+}
+
+input[type="checkbox"]:checked + label span.filter-option-switch {
+  background-color: #18222C;
+}
+
+input[type="checkbox"]:not(:checked) + label span.filter-option-switch {
+  background-color: #22313F;
+}
+
+.row.flat-switch {
+  padding-top: -10%;
+  padding-bottom: 10%;
 }
 
 .trip-content, .hotel-content {
