--- a/app/assets/stylesheets/toggle-switches.css
+++ b/app/assets/stylesheets/toggle-switches.css
@@ -1,50 +1,50 @@
-[type="checkbox"]:not(:checked),
-[type="checkbox"]:checked {
+[type="checkbox"].flat-switch:not(:checked),
+[type="checkbox"].flat-switch:checked {
   position: absolute;
   left: -9999px;
 }
-[type="checkbox"]:not(:checked) + label,
-[type="checkbox"]:checked + label {
+[type="checkbox"].flat-switch:not(:checked) + label,
+[type="checkbox"].flat-switch:checked + label {
   position: relative;
   padding-left: 75px;
   cursor: pointer;
 }
-[type="checkbox"]:not(:checked) + label:before,
-[type="checkbox"]:checked + label:before,
-[type="checkbox"]:not(:checked) + label:after,
-[type="checkbox"]:checked + label:after {
+[type="checkbox"].flat-switch:not(:checked) + label:before,
+[type="checkbox"].flat-switch:checked + label:before,
+[type="checkbox"].flat-switch:not(:checked) + label:after,
+[type="checkbox"].flat-switch:checked + label:after {
   content: '';
   position: absolute;
 }
-[type="checkbox"]:not(:checked) + label:before,
-[type="checkbox"]:checked + label:before {
+[type="checkbox"].flat-switch:not(:checked) + label:before,
+[type="checkbox"].flat-switch:checked + label:before {
   left:0; top: -3px;
-  width: 65px; height: 30px;
+  width: 55px; height: 25px;
   background: #DDDDDD;
   border-radius: 15px;
   transition: background-color .2s;
 }
-[type="checkbox"]:not(:checked) + label:after,
-[type="checkbox"]:checked + label:after {
+[type="checkbox"].flat-switch:not(:checked) + label:after,
+[type="checkbox"].flat-switch:checked + label:after {
   width: 20px; height: 20px;
   transition: all .2s;
   border-radius: 50%;
-  background: #7F8C9A;
+  background: white;
   top: 2px; left: 5px;
 }
 
 /* on checked */
-[type="checkbox"]:checked + label:before {
+[type="checkbox"].flat-switch:checked + label:before {
   background:#34495E;
 }
-[type="checkbox"]:checked + label:after {
+[type="checkbox"].flat-switch:checked + label:after {
   background: #39D2B4;
   top: 2px; left: 40px;
 }
 
-[type="checkbox"]:checked + label .ui,
-[type="checkbox"]:not(:checked) + label .ui:before,
-[type="checkbox"]:checked + label .ui:after {
+[type="checkbox"].flat-switch:checked + label .ui,
+[type="checkbox"].flat-switch:not(:checked) + label .ui:before,
+[type="checkbox"].flat-switch:checked + label .ui:after {
   position: absolute;
   left: 6px;
   width: 65px;
@@ -54,16 +54,18 @@
   line-height: 22px;
   transition: all .2s;
 }
-[type="checkbox"]:not(:checked) + label .ui:before {
+[type="checkbox"].flat-switch:not(:checked) + label .ui:before {
   content: "off";
   left: 32px
 }
-[type="checkbox"]:checked + label .ui:after {
+[type="checkbox"].flat-switch:checked + label .ui:after {
   content: "on";
   color: #39D2B4;
 }
-[type="checkbox"]:focus + label:before {
+[type="checkbox"].flat-switch:focus + label:before {
   border: 1px #777;
   box-sizing: border-box;
   margin-top: -1px;
 }
+
+
