--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -10,6 +10,10 @@
   display: flex;
 }
 
+#itinerary {
+  z-index: 10;
+}
+
 .itinerary-details {
   font-size: 0.75em;
 }
@@ -55,5 +59,17 @@ div.panel-heading {
     width: 100% !important;
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+
+  .box {
+    margin-top: 35px;
+    margin-bottom: 45px;
+    padding-top: 0px;
+  }
+
+  .hotel-content {
+    margin-top: 50px;
+    margin-bottom: 200px;
   }
 }
