--- a/app/views/filters/_filter.html.erb
+++ b/app/views/filters/_filter.html.erb
@@ -1,5 +1,5 @@
 <div class='wrapper text-center'>
-    <div class="btn-group btn-group" data-toggle="buttons">
+    <div class="btn-group btn-group main-toggle" data-toggle="buttons">
         <button type="button" class="btn btn-default time-dur-btn active" ng-click="show_flight_results=true">
             <input type="radio" name="options" id="option1"> <i class="fa fa-clock-o fa-lg"></i>
         </button>
@@ -11,7 +11,7 @@
 
 <div class="filter-list">
   <div class="row filter-list-inner">
-    <div class="col-xs-7" id="filter-labels">
+    <div class="col-xs-7 col-md-6" id="filter-labels">
       <span class="filter-option-label">
         Departure
       </span>
@@ -25,137 +25,62 @@
         Direct Flight
       </span>
     </div>
-    <div class="col-xs-5">
+    <div class="col-xs-5 col-md-6">
       <div class="btn-embossed" id="filter-switches">
         <div class="row">
-
-          <input type="checkbox" id="depart-am" ng-model="options.departam_status" ng-change="updateFlights()">
-            <label for="depart-am">
+          <div class="col-xs-6">
+            <input type="checkbox" id="depart-am" ng-model="options.departam_status" ng-change="updateFlights()">
+            <label class="square-toggle-button" for="depart-am">
               <span class="filter-option-switch btn-embossed">
                 <span class="filter-option-switch-inner fa fa-sun-o"></span>
               </span>
             </label>
-
-          <input type="checkbox" id="depart-pm" ng-model="options.departpm_status" ng-change="updateFlights()">
-          <label for="depart-pm">
-            <span class="filter-option-switch btn-embossed">
-              <span class="filter-option-switch-inner fa fa-moon-o"></span>
-            </span>
-          </label>
-
+          </div>
+          <div class="col-xs-6">
+            <input type="checkbox" id="depart-pm" ng-model="options.departpm_status" ng-change="updateFlights()">
+            <label class="square-toggle-button" for="depart-pm">
+              <span class="filter-option-switch btn-embossed">
+                <span class="filter-option-switch-inner fa fa-moon-o"></span>
+              </span>
+            </label>
+          </div>
         </div>
         <div class="row">
-          <input type="checkbox" id="arrive-am" ng-model="options.arriveam_status" ng-change="updateFlights()">
-          <label for="arrive-am">
-            <span class="filter-option-switch btn-embossed">
-              <span class="filter-option-switch-inner fa fa-sun-o"></span>
-            </span>
-          </label>
-
-          <input type="checkbox" id="arrive-pm" ng-model="options.arrivepm_status" ng-change="updateFlights()">
-          <label for="arrive-pm">
-            <span class="filter-option-switch btn-embossed">
-              <span class="filter-option-switch-inner fa fa-moon-o"></span>
-            </span>
-          </label>
-
+          <div class="col-xs-6">
+            <input type="checkbox" id="arrive-am" ng-model="options.arriveam_status" ng-change="updateFlights()">
+            <label class="square-toggle-button" for="arrive-am">
+              <span class="filter-option-switch btn-embossed">
+                <span class="filter-option-switch-inner fa fa-sun-o"></span>
+              </span>
+            </label>
+          </div>
+          <div class="col-xs-6">
+            <input type="checkbox" id="arrive-pm" ng-model="options.arrivepm_status" ng-change="updateFlights()">
+            <label class="square-toggle-button" for="arrive-pm">
+              <span class="filter-option-switch btn-embossed">
+                <span class="filter-option-switch-inner fa fa-moon-o"></span>
+              </span>
+            </label>
+          </div>
         </div>
         <div class="row flat-switch">
-          <input type="checkbox" class="flat-switch" id="airbnb" ng-model="airBnb_status" ng-change="airBnb()">
-          <label for="airbnb">
-            <span class="ui"></span>
-          </label>
+          <div class="col-xs-6 col-xs-offset-1">
+            <input type="checkbox" class="flat-switch" id="airbnb" ng-model="airBnb_status" ng-change="airBnb()">
+            <label for="airbnb">
+              <span class="ui"></span>
+            </label>
+          </div>
         </div>
-
         <div class="row flat-switch">
-          <input type="checkbox" class="flat-switch" id="direct-flight" ng-model="options.direct_status" ng-change="updateFlights()">
-          <label for="direct-flight">
-            <span class="ui"></span>
-          </label>
+          <div class="col-xs-6 col-xs-offset-1">
+            <input type="checkbox" class="flat-switch" id="direct-flight" ng-model="options.direct_status" ng-change="updateFlights()">
+            <label for="direct-flight">
+              <span class="ui"></span>
+            </label>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-
-
 </div>
- <!--    <div class="filter-option row">
-        <div class="filter-option-label col-md-6">
-            <span>Departure<span>
-        </div>
-        <div class="col-md-3 filter-switch-container">
-            <span>AM<span>
-            <div class="filter-option-switch">
-                <input type="checkbox" id="test1" ng-model="options.departam_status" ng-change="updateFlights()">
-                <label for="test1">
-                    <span class="ui"></span>
-                </label>
-            </div>
-        </div>
-        <div class="col-md-3 filter-switch-container">
-            <span>PM</span>
-            <div class="filter-option-switch">
-                <label for="test1">
-                    <span class="ui"></span>
-                </label>
-                <input type="checkbox" id="test1" ng-model="options.departam_status" ng-change="updateFlights()">
-            </div>
-        </div>
-    </div>
 
-    <div class="filter-option row">
-        <div class="filter-option-label">
-            Departure PM
-        </div>
-        <div class="filter-option-switch">
-            <form action="#">
-                <input type="checkbox" id="test2" ng-model="options.departpm_status" ng-change="updateFlights()"><label for="test2"><span class="ui"></span></label>
-            </form>
-        </div>
-    </div>
-
-    <div class="filter-option row">
-        <div class="filter-option-label">
-            Arrival AM
-        </div>
-        <div class="filter-option-switch">
-            <form action="#">
-                <input type="checkbox" id="test3" ng-model="options.arriveam_status" ng-change="updateFlights()"><label for="test3"><span class="ui"></span></label>
-            </form>
-        </div>
-    </div>
-
-    <div class="filter-option row">
-        <div class="filter-option-label">
-            Arrival PM
-        </div>
-        <div class="filter-option-switch">
-            <form action="#">
-                <input type="checkbox" id="test4" ng-model="options.arrivepm_status" ng-change="updateFlights()"><label for="test4"><span class="ui"></span></label>
-            </form>
-        </div>
-    </div>
-
-    <div class="filter-option row">
-        <div class="filter-option-label">
-            AirBnb
-        </div>
-        <div class="filter-option-switch">
-            <form action="#">
-                <input type="checkbox" id="test5" ng-model="airBnb_status" ng-change="airBnb()"><label for="test5"><span class="ui"></span></label>
-            </form>
-        </div>
-    </div>
-
-    <div class="filter-option row">
-        <div class="filter-option-label">
-            Direct
-        </div>
-        <div class="filter-option-switch">
-            <form action="#">
-                <input type="checkbox" id="test6" ng-model="options.direct_status" ng-change="updateFlights()"><label for="test6"><span class="ui"></span></label>
-            </form>
-        </div>
-    </div> -->
-</div>
