--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,12 @@
-<div class="row" id="account-container">
-  <div class="col-md-6 panel panel-default user-section">
-    <div class="row">
-      <h3>Saved Itineraries</h3>
+<div class="container">
+  <div class="row" id="account-container">
+    <div class="col-md-8 col-md-offset-2 panel panel-default user-section">
+      <div class="row">
+        <h3>Saved Itineraries</h3>
+      </div>
+      <div class="row">
+        <%= render @itineraries %>
+      </div>
     </div>
-    <div class="row">
-      <%= render @itineraries %>
-    </div>
-  </div>
-  <div class="col-md-6 panel panel-default user-section" id="price-alerts">
-    <h3>Price Alerts</h3>
-
-
   </div>
 </div>
